Minor styling, some transisions, hover functions and fixed gap in wish

--- a/src/main/resources/static/css/wish.css
+++ b/src/main/resources/static/css/wish.css
@@ -3,8 +3,14 @@
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap to the next line */
     justify-content: flex-start; /* Space between items */
-    gap: 20px; /* Space between wishlist items */
-    margin: 20px;
+    gap: 63px; /* Space between wishlist items */
+    margin: 3%;
+
+
+}
+
+.wishlist-name, h2{
+    font-size: 50px;
 }
 
 .square{
@@ -17,6 +23,11 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+}
+
+
+.square:hover{
+    transform: scale(1.05); /* Slight zoom effect on hover */
 }
 
 .wish-image-container{
@@ -43,6 +54,7 @@ input{
 .form-box{
     padding: 10%;
 }
+
 input .input-field {
     height: 50px;
     width: 100%;
@@ -52,7 +64,7 @@ input .input-field {
 
 .wishForm {
     margin-right: 3%;
-    margin-left: 3%;
+    margin-left: 5%;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -60,9 +72,7 @@ input .input-field {
     width: 285px;
     text-align: center;
     cursor: pointer;
-}
-.wishForm h2 {
-    margin-top: 0;
+
 }
 
 .modal {
